# optical-waveguide

./: .gitattributes  .gitignore  Cargo.toml  README.md  bidimensional_example.py  pyproject.toml  requirements-dev.txt  todo  tridimensional_example.py
examples/: .gitignore  bidimensional.py  bidimensional_simulation.py  optical_waveguide.py  tridimensional.py  tridimensional_simulation.py
fdmbpm/: .gitignore  Cargo.toml  todo
front_end/: plot.py  plot_countour.py  plot_diff_error.py  plot_wave.py
normalize/: Cargo.toml
opticWaveSim/: optical_waveguide.py
optical_waveguide/: Cargo.toml  bidimensional_example.py  todo  tridimensional_example.py
optical_waveguide/.cargo/: config
optical_waveguide/optical_waveguide/: __init__.py
optical_waveguide/python_wrapper/: waveguide_builder.py
optical_waveguide/src/: lib.rs
optical_waveguide/src/export/: mod.rs
optical_waveguide/src/fdmbpm/: beam.rs  boundary_codition.rs  eletric_field.rs  grid.rs  mod.rs
optical_waveguide/src/fdmbpm/cores/: mod.rs  rectilinear.rs
optical_waveguide/src/fdmbpm/slab/: bidimensional.rs  mod.rs  tridimensional.rs
optical_waveguide/src/fp/matrix/: mod.rs
optical_waveguide/src/functional_types/: mod.rs
optical_waveguide/src/input/: mod.rs
optical_waveguide/src/lin_alg/: thomas.rs
optical_waveguide/src/optical_waveguide/: __init__.py
optical_waveguide/src/simulator/: mod.rs
optical_waveguide/src/simulator/export/: mod.rs
optical_waveguide/src/simulator/fdmbpm/: beam.rs  eletric_field.rs  mod.rs
optical_waveguide/src/simulator/fdmbpm/cores/: mod.rs
optical_waveguide/src/simulator/fdmbpm/slab/: bidimensional.rs  mod.rs  tridimensional.rs
optical_waveguide/src/simulator/lin_alg/: mod.rs  thomas.rs
optical_waveguide/src/tools/: mod.rs
optical_waveguide/src/tools/export/: mod.rs
optical_waveguide/tests/: unit_tests.rs
(+99 files in other folders)
