[package]
name = "optical_waveguide"
version = "0.1.0"
authors = ["rennelou <rennelou@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "optical_waveguide"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.1"
structopt = "0.3.13"
hdf5 = "0.8"
ndarray = "0.15.3"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.15.0", features = ["extension-module"]}