# Workaround to bootstrap maturin on non-manylinux platforms
[build-system]
requires = ["setuptools~=53.0.0", "wheel~=0.36.2", "toml~=0.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "optical_waveguide"
requires-python = ">=3.6"
classifiers = [
    "Topic :: Simulation :: Optical Waveguide",
]
dependencies = ["pytest>=3.5.0", "pip>=21.3", "h5py>=3.3.0", "matplotlib>=3.4.2", "PyQt5>=5.15.4"]