[package]
name = "optical_waveguide"
version = "0.1.0"
authors = ["rennelou <rennelou@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
structopt = "0.3.13"
ndarray = "0.14"
hdf5 = "0.7.1"
num = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true